# pifeed

./: README.md  main.py  pyproject.toml  requirements.txt
docs/: STREAMER.md  usage.md
pifeed/: __init__.py  __main__.py  _const.py  _metadata.py  _util.py
pifeed/_libs/: __init__.py
pifeed/_libs/streamer/: __init__.py  core.py  drone.py  workers.py
pifeed/_objects/: __init__.py  _error.py
pifeed/_types/: __init__.py  _type.py
pifeed/_utils/: __init__.py  fspathlib.py
refs/: STREAMER.md
refs/streamer/: __init__.py  core.py  drone.py  workers.py
tests/: test_config.py
